--- a/styles.css
+++ b/styles.css
@@ -126,13 +126,14 @@ p {
 #projects{
     display: grid;
     justify-content: space-between;
+    align-items: center;
     grid-template-columns: repeat(3, 1fr) ;
 }
 .project1, .project2, .project3 {
     background: #66BFBF;
-    border: 10px solid blanchedalmond;
-    border-radius: 10px;
-    padding: 20px;
+    border-radius: 10%;
+    padding: 10px;
+    margin: 10px;
 }
 @media (max-width:768px) {
     #projects{
