--- a/styles.css
+++ b/styles.css
@@ -125,14 +125,13 @@ p {
 }
 #projects{
     display: grid;
-    justify-content: center;
+    justify-content: space-between;
     grid-template-columns: repeat(3, 1fr) ;
 }
 .project1, .project2, .project3 {
     background: #66BFBF;
-    border-radius: 10%;
-    padding: 10px;
-    margin: 10px;
+    border-radius: 10px;
+    padding: 20px;
 }
 @media (max-width:768px) {
     #projects{
@@ -182,3 +181,4 @@ p {
     width: 40px;
 
 }
+
