--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,7 @@ p {
 }
 #projects{
     display: grid;
-    justify-content: space-between;
+    justify-content: center;
     grid-template-columns: repeat(3, 1fr) ;
 }
 .project1, .project2, .project3 {
@@ -181,4 +181,5 @@ p {
     width: 40px;
 
 }
+
 
